interface IApplication {
    void Start();
    void Quit();
    void Update();
    int Cleanup();
    void Order(String word);
}
