import java.util.List;
interface ICore {
    void Order(List<JuliusWord> wordList);
}
